<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Snapshot</string>
    <string name="loading">Loading…</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_videoedit">VideoeditActivity</string>
    <string name="camera_video_format_error">play error</string>
    <string name="tip_welcome">Welcome to Snapshot!</string>
    <string name="tip_shoot_video">Shoot a video here</string>
    <string name="video_uploading">Uploading</string>

    <string name="camera_takevideo">Please shoot the video</string>
    <string name="camera_finish">Next</string>
    <string name="camera_record">video is recording</string>
    <string name="camera_droptitle">Are you sure to quit?</string>
    <string name="camera_dropcontent">If exit, the video will not be saved！</string>
    <string name="camera_cancel">Cancel</string>
    <string name="camera_ok">Sure</string>
    <string name="camera_permission">Please open the camera permissions</string>
    <string name="audio_permission">Please get permission to record</string>
    <string name="video_manage_activity_video_count">Video</string>
    <string name="you_do_not_have_not_upload_the_video">No video uploaded</string>
    <string name="video_manage_activity_cancel_all">CancelAll</string>
    <string name="video_manage_activity_select_all">SelectAll</string>
    <string name="feedback_activity_edit_hint_text">Please fill in your opinion and feedback. We will be open-minded and continuous improvement </string>
    <string name="feedback_activity_edit_mail">Your contact (email or telephone)</string>
    <string name="feedback_activity_send_bloag_text">Agree to send log</string>
    <string name="feedback_activity_commit_text">Submit feedback</string>
    <string name="feedback_activity_title">Feedback</string>

    <string name="finish">Finish</string>
    <string name="say_something">Say something...</string>
    <string name="video_manage">VideoManage</string>
    <string name="select">Select</string>
    <string name="notification">Notification</string>
    <string name="log_in">LogOut</string>

    <string name="go_on">Continue</string>
    <string name="quit_app">Tap again to quit Snapshot</string>

</resources>