<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/camera_title"
        android:text="@string/camera_droptitle"
        android:textSize="20sp"
        android:textColor="#de000000"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/camera_dropcontent"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/camera_dropcontent"
        android:textColor="#a3000000"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/camera_title"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@+id/camera_dropcontent"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/camera_cancal"
            android:text="@string/camera_cancel"
            android:textSize="16sp"
            android:textColor="#a3000000"
            android:layout_alignParentLeft="true"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/camera_ok"
            android:text="@string/camera_ok"
            android:textSize="16sp"
            android:textColor="#FF4D73FF"
            android:layout_alignParentRight="true"
            android:padding="5dp"/>
    </RelativeLayout>

</RelativeLayout>
