<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AllBackground"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="47dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/feedback_activity_edit_feedback_background">
                <EditText
                    android:id="@+id/edtFeedbackActivityFeedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/feedback_activity_edit_hint_text"
                    android:textSize="14sp"
                    android:background="@null"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/feedback_activity_edit_feedback_background">
                <EditText
                    android:id="@+id/edtFeedbackActivityEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/feedback_activity_edit_mail"
                    android:background="@null"
                    android:textSize="14sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="19dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbFeedbackActivitySendBlogIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:checked="true"
                    android:background="@drawable/feedback_activiti_send_blog_icon_select" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_activity_send_bloag_text"
                    android:textColor="@color/feedback_activity_send_bloag_text_color"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:typeface="monospace"
                android:background="@color/line_color"
                android:layout_marginTop="100dp" />

            <LinearLayout
                android:id="@+id/llFeedbackActivityCommit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="14dp"
                android:clickable="true"
                android:background="@drawable/feedback_activity_commit_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_activity_commit_text"
                    android:typeface="monospace"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:id="@+id/textView"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
