<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/flMainDrawerUser"
                android:layout_width="match_parent"
                android:layout_height="172dp"
                android:background="@drawable/bg"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black30"/>

                <ImageView
                    android:id="@+id/ivMainDrawerNotLoginUserAvatar"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/item_video_moments_avatar_1"/>

                <FrameLayout
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="40dp"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/ivMainDrawerUserAvatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/item_video_moments_avatar_1"/>

                    <ImageView
                        android:id="@+id/ivMainDrawerSex"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="44dp"
                        android:layout_marginTop="44dp"
                        android:src="@drawable/icon_gender_male"/>

                </FrameLayout>

                <TextView
                    android:id="@+id/tvMainDrawerNickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="116dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvMainDrawerAttention"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="144dp"
                    android:clickable="true"
                    android:textColor="@color/white80"
                    android:textSize="14sp"/>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/llMainDrawerVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="setOnClick"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingLeft="18dp"
                android:paddingTop="28dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/sidebar_icon_video"/>

                    <TextView
                        style="@style/MainDrawItemNickNameTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="56dp"
                        android:layout_marginTop="3dp"
                        android:text="@string/video_manage"/>

                    <TextView
                        android:id="@+id/tvMainDrawerNotUploadVideoCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="4dp"
                        android:textSize="12dp"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMainDrawerNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="setOnClick"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingLeft="18dp"
                android:paddingTop="16dp"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/sidebar_icon_news"/>

                    <TextView
                        style="@style/MainDrawItemNickNameTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="56dp"
                        android:layout_marginTop="3dp"
                        android:text="@string/notification"/>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMainDrawerFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="setOnClick"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingLeft="18dp"
                android:paddingTop="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/sidebar_icon_feedback"/>

                    <TextView
                        style="@style/MainDrawItemNickNameTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="56dp"
                        android:layout_marginTop="3dp"
                        android:text="@string/feedback_activity_title"/>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMainDrawerSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="setOnClick"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingLeft="18dp"
                android:paddingTop="16dp"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/sidebar_icon_setting"/>

                    <TextView
                        style="@style/MainDrawItemNickNameTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="56dp"
                        android:layout_marginTop="3dp"
                        android:text="@string/action_settings"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMainDrawerLogin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="170dp"
                android:background="@drawable/main_drawer_connect_background"
                android:clickable="true"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/log_in"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
